# Game-Engine-for-Teaching-

./: .ctags  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: architecture-lint.yml  build-linux.yml  build-windows.yml  contract-tests.yml  teaching-standards.yml  validate-assets.yml
Lua/: README.md
assets/examples/: audio-manifest.json  model-manifest.json  texture-manifest.json  tilemap-manifest.json
assets/schema/: asset-manifest.schema.json
build-test/: CMakeCache.txt  Makefile  cmake_install.cmake
build-test/scripts/: enemies.lua  main.lua  quests.lua
docs/: ARCHITECTURE.md  COPILOT_CONTINUATION.md  CURRICULUM_INDEX.md  FF15_REQUIREMENTS_BLUEPRINT.md  ISSUES_LINKS.md  PROJECT_MILESTONES.md  ROADMAP.md  asset-manifest.md
editor/: CMakeLists.txt  README.md
editor/src/: ContentBrowser.cpp  ContentBrowser.hpp  MainWindow.cpp  MainWindow.hpp  SceneEditor.cpp  SceneEditor.hpp  main.cpp
engine/: README.md
samples/vertical_slice_project/: AssetRegistry.json  Project.json  README.md  cook_assets.py
samples/vertical_slice_project/Content/Maps/: MainTown.scene.json
scripts/: check_architecture.py  extract_teaching_notes.py
shaders/: triangle.frag  triangle.vert
shared/runtime/: Guid.hpp  Log.hpp  VersionedFile.hpp
shared/schemas/: anim_clip.schema.json  anim_graph.schema.json  asset_registry.schema.json  audio_bank.schema.json  project.schema.json  scene.schema.json  skeleton.schema.json
src/: main.cpp
src/engine/assets/: asset_db.cpp  asset_db.hpp  asset_loader.cpp  asset_loader.hpp
src/engine/audio/: audio_system.cpp  audio_system.hpp  xaudio2_backend.cpp  xaudio2_backend.hpp
src/engine/core/: EventBus.hpp  Logger.cpp  Logger.hpp  Types.hpp
src/engine/ecs/: ECS.hpp
src/engine/input/: InputSystem.cpp  InputSystem.hpp
src/engine/platform/win32/: Win32Window.cpp  Win32Window.hpp
src/engine/rendering/: IRenderer.hpp  Renderer.cpp  Renderer.hpp  RendererFactory.hpp
src/engine/rendering/d3d11/: D3D11Renderer.cpp  D3D11Renderer.hpp  d3d11_texture.cpp  d3d11_texture.hpp
src/engine/rendering/vulkan/: VulkanRenderer.cpp  VulkanRenderer.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_mesh.cpp  vulkan_mesh.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp
src/engine/scripting/: LuaEngine.cpp  LuaEngine.hpp
src/game/: Game.cpp  Game.hpp  GameData.hpp
src/game/systems/: AISystem.cpp  AISystem.hpp  CampSystem.cpp  CampSystem.hpp  CombatSystem.cpp  CombatSystem.hpp  InventorySystem.cpp  InventorySystem.hpp  MagicSystem.cpp  MagicSystem.hpp  QuestSystem.cpp  QuestSystem.hpp  ShopSystem.cpp  ShopSystem.hpp  WeatherSystem.cpp  WeatherSystem.hpp
src/game/world/: TileMap.cpp  TileMap.hpp  WorldMap.cpp  WorldMap.hpp  Zone.cpp  Zone.hpp
src/sandbox/: main.cpp  test_world.cpp  test_world.hpp
src/tools/cook/: cook_main.cpp
tests/cook/: test_cook_pipeline.py
tests/golden/: README.md  assetdb_expected.json
tools/: audio_engine.py  audit_teaching_notes.py  creation_engine.py  validate-assets.py
tools/anim_authoring/: README.md  pyproject.toml
tools/anim_authoring/animation_engine/: __init__.py
tools/anim_authoring/animation_engine/animation/: __init__.py
tools/anim_authoring/animation_engine/editor/: __init__.py
tools/anim_authoring/animation_engine/integration/: __init__.py  anim_pipeline.py
tools/anim_authoring/animation_engine/io/: __init__.py
tools/anim_authoring/animation_engine/math_utils/: __init__.py
tools/anim_authoring/animation_engine/model/: __init__.py
tools/anim_authoring/animation_engine/runtime/: __init__.py
tools/anim_authoring/tests/: test_animation_engine.py
tools/audio_authoring/: README.md  pyproject.toml
tools/audio_authoring/audio_engine/: __init__.py  cli.py  engine.py
tools/audio_authoring/audio_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tools/audio_authoring/audio_engine/ai/: __init__.py  backend.py  generator.py  music_gen.py  prompt.py  sfx_gen.py  sfx_synth.py  voice_gen.py  voice_synth.py
tools/audio_authoring/audio_engine/composer/: __init__.py  chord.py  pattern.py  scale.py  sequencer.py
tools/audio_authoring/audio_engine/dsp/: __init__.py  compressor.py  dither.py  eq.py  limiter.py  resample.py  reverb.py
tools/audio_authoring/audio_engine/export/: __init__.py  audio_exporter.py
tools/audio_authoring/audio_engine/integration/: __init__.py  asset_pipeline.py  game_state_map.py
tools/audio_authoring/audio_engine/integration/cpp/: AudioSystem.hpp
tools/audio_authoring/audio_engine/integration/lua/: audio.lua
tools/audio_authoring/audio_engine/qa/: __init__.py  clipping_detector.py  loop_analyzer.py  loudness_meter.py
tools/audio_authoring/audio_engine/render/: __init__.py  offline_bounce.py  stem_renderer.py
tools/audio_authoring/audio_engine/synthesizer/: __init__.py  effects.py  envelope.py  filter.py  instrument.py  oscillator.py
tools/audio_authoring/tests/: test_audio_engine.py  test_integration.py  test_qa.py
tools/ci/: check_teaching_standards.py
tools/tests/: test_validate_assets.py
tools/tests/fixtures/invalid/: bad-hash.json  bad-loop-points.json  bad-semver.json  duplicate-ids.json  missing-audio-extension.json  missing-manifest-version.json  missing-required-fields.json  unknown-asset-type.json
tools/tests/fixtures/valid/: audio-manifest.json  model-manifest.json  texture-manifest.json  tilemap-manifest.json
